k8s/overlays/kind/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: linkedeye-core
  labels:
    app.kubernetes.io/part-of: linkedeye
